# phase-shift-keying

./: README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
data/output/: carry_wave.npy  noisy_signal.npy  signal.npy
data/output/ASK/: ber.csv  carry_wave.npy  message.npy  noisy_signal.npy  received_signal.npy  recieved_signal.npy  signal.npy
data/output/BPSK/: ber.csv  message.npy  noisy_signal.npy  received_signal.npy  signal.npy
data/output/QPSK/: ber.csv  message.npy  noisy_signal.npy  received_signal.npy  signal.npy
report/: notebook.ipynb
report/output/: bers.csv
src/: amplitude_shift_keying.py  binary_shift_keying.py  quadrature_shift_keying.py  simulation.py
src/psksimulator/: modulations.py  signals.py  simulation.py  simulator.py  visualization.py
src/psksimulator/models/: ask.py  base.py  bpsk.py  qpsk.py
