[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "psksimulator"
version = "0.1.0"
description = "Symulator modulacji fazowych"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.9.1",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "seaborn>=0.13.2"
]

[project.urls]
source = "https://github.com/Barionetta/phase-shift-keying"